トップ　お知らせ追加、シミュレーション料金　注釈変更、金額変更＋バックアップ

--- a/themes/san_kaikan/organizer/simulator.html
+++ b/themes/san_kaikan/organizer/simulator.html
@@ -18,7 +18,7 @@
 <!-- #include file="/include/head.html" -->
 <script>
 ACMS.Ready(function(){
-<!-- #include file="./_js_vals_20191001.html" -->
+<!-- #include file="./_js_vals_20211125.html" -->
 	var totalp_all = 0;
 	var number_format = function(inval){
 		return inval.toString().replace(/(\d)(?=(\d\d\d)+$)/g , '$1,');
@@ -124,7 +124,8 @@ ACMS.Ready(function(){
 	<div id="main">
 		<div id="conts">
 			<h1 class="headLine01"><span>料金シミュレーター<span class="textSpan">PRICE SIMULATOR</span></span></h1>
-			<p class="textP">使用予定の施設のご利用日数を入力すると、各施設ごとの利用料金と合計金額が表示されます。</p>
+			<p class="textP">使用予定の施設のご利用日数を入力すると、各施設ごとの利用料金と合計金額が表示されます。<br>
+				利用時間を延長される場合は"左記以外※1時間単位の単価"の欄で<span class="fcRed">ご利用日数とご利用時間数の両方の入力が必要です。</span></p>
 			<ul class="comMenu comMenu04 clearfix">
 				<li><a href="#simu01"><span>西展示館</span></a></li>
 				<li><a href="#simu02"><span>東展示館</span></a></li>
