--- a/themes/san_kaikan/top.html
+++ b/themes/san_kaikan/top.html
@@ -250,6 +250,22 @@ ACMS.Ready(function() {
 
 <div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
 <div style="font-size:135%">
+<p><font color="#ff0000"><b>【お詫び】
+
+<br />
+県立広島産業会館において，令和元年10月１日の消費税の税率アップによる利用料金設定の際<br />
+に，一部の会場（本館の会議室，事務室，及び東展示館の事務室，ステージ）の延長利用料金について，県条例で定める利用料金の上限を超過した金額で，以降２年間にわたり，徴収していたことが判明しました。<br />
+対象となる皆様方には，多大なるご迷惑をおかけしましたことを心よりお詫び申し上げますとともに，超過分の利用料金を返還させていただきます。<br />
+今後このようなことのないように管理を徹底してまいりますので，何卒ご容赦賜りますようお願い申し上げます。<br />
+<br />
+<a href="https://sangyoukaikan.jp/archives/001/202111/20211122_choka.pdf" style="color:black;font-size:12pt;" target="_blank">※ 詳細は，こちらをご覧ください。</a>
+</b></font></p>
+</div>
+</span>
+</div>
+
+<div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
+<div style="font-size:135%">
 【主催者の方へ】
 <br/>現在、当館HPの会館空き状況など一部のページが閲覧できない不具合が発生しております。
 <br/>閲覧できないページの詳細につきましては、当館事務所までお問合せいただきますようお願い申し上げます。
