--- a/themes/san_kaikan/top.html
+++ b/themes/san_kaikan/top.html
@@ -266,16 +266,6 @@ ACMS.Ready(function() {
 
 <div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
 <div style="font-size:135%">
-【主催者の方へ】
-<br/>現在、当館HPの会館空き状況など一部のページが閲覧できない不具合が発生しております。
-<br/>閲覧できないページの詳細につきましては、当館事務所までお問合せいただきますようお願い申し上げます。
-<br/>（電話番号：082-253-8111）
-</div>
-</span>
-</div>
-
-<div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
-<div style="font-size:135%">
 
 <!--
 <p><font size="12pt"color="#ff0000"><b>【主催者の方へ】
@@ -283,8 +273,10 @@ ACMS.Ready(function() {
 <br />広島県における「緊急事態宣言」は9月30日をもって解除となりましたが、感染者の発生の減少傾向を維持していくために、感染症拡大防止集中対策を実施いたします。<br />
 10月1日（金）～10月30日（土）までの期間、対処方針の改定をいたしますので、ご確認をお願いいたします。</b></font></p><br />
 -->
-<a href="https://sangyoukaikan.jp/archives/001/202110/%e6%96%b0%e5%9e%8b%e3%82%b3%e3%83%ad%e3%83%8a%e3%82%a6%e3%82%a3%e3%83%ab%e3%82%b9%e6%84%9f%e6%9f%93%e7%97%87%e6%8b%a1%e5%a4%a7%e9%98%b2%e6%ad%a2%e3%81%ab%e5%90%91%e3%81%91%e3%81%9f%e5%af%be%e5%87%a6%e6%96%b9%e9%87%9d%e3%81%ae%e6%94%b9%e5%ae%9a2021.10.01.pdf" style="color:black;font-size:12pt;" target="_blank"><b>【主催者の方へ】新型コロナウィルス感染症拡大防止に向けた対処方針の改定（令和3年10月1日改定）</b></a><br /><br />
-<a href="https://sangyoukaikan.jp/archives/001/202110/%e5%ba%83%e5%b3%b6%e7%94%a3%e6%a5%ad%e4%bc%9a%e9%a4%a8%e5%8f%8e%e5%ae%b9%e4%ba%ba%e6%95%b0.pdf" style="color:black;font-size:12pt;" target="_blank"><b>【主催者の方へ】広島県立広島産業会館収容人数について</b></a><br /><br />
+<p><font size="12pt"><b>【主催者の方へ】</b></font></p>
+◆　<a href="https://sangyoukaikan.jp/archives/001/202112/20211125oshirase foralluser.pdf" style="color:red;font-size:12pt;" target="_blank"><b>※重要　感染対策チェックリストの公表について（令和3年12月1日）</b></a><br /><br />
+◆　<a href="https://sangyoukaikan.jp/archives/001/202110/%e6%96%b0%e5%9e%8b%e3%82%b3%e3%83%ad%e3%83%8a%e3%82%a6%e3%82%a3%e3%83%ab%e3%82%b9%e6%84%9f%e6%9f%93%e7%97%87%e6%8b%a1%e5%a4%a7%e9%98%b2%e6%ad%a2%e3%81%ab%e5%90%91%e3%81%91%e3%81%9f%e5%af%be%e5%87%a6%e6%96%b9%e9%87%9d%e3%81%ae%e6%94%b9%e5%ae%9a2021.10.01.pdf" style="color:black;font-size:12pt;" target="_blank"><b>新型コロナウィルス感染症拡大防止に向けた対処方針の改定（令和3年10月1日改定）</b></a><br /><br />
+◆　<a href="https://sangyoukaikan.jp/archives/001/202110/%e5%ba%83%e5%b3%b6%e7%94%a3%e6%a5%ad%e4%bc%9a%e9%a4%a8%e5%8f%8e%e5%ae%b9%e4%ba%ba%e6%95%b0.pdf" style="color:black;font-size:12pt;" target="_blank"><b>広島県立広島産業会館収容人数について</b></a><br /><br />
 <b>【重要】新型コロナウィルス感染症に関する対応について</b><br />
 
 現在、国内での感染者数が増加している新型コロナウィルス感染症に伴い、当施設では会場入口への手消毒液の設置などの予防対策を行っております。<br />
@@ -308,6 +300,16 @@ ACMS.Ready(function() {
 </span>
 </div>
 </div>
+
+<div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
+	<div style="font-size:135%">
+	【主催者の方へ】
+	<br/>現在、当館HPの会館空き状況など一部のページが閲覧できない不具合が発生しております。
+	<br/>閲覧できないページの詳細につきましては、当館事務所までお問合せいただきますようお願い申し上げます。
+	<br/>（電話番号：082-253-8111）
+	</div>
+	</span>
+	</div>
 <br />
 <br />
 
