トップ　スライドバナー　リンク修正

--- a/themes/san_kaikan/top.html
+++ b/themes/san_kaikan/top.html
@@ -145,14 +145,14 @@ ACMS.Ready(function() {
 <li><img src="img/index/MESSEHIROSHIMA.JPG" alt=" " width="1200" height="400" /></li>
 
 
-<li><a href="https://sangyoukaikan.jp/hsk50th/html5.html#page=1" target="_blank"><img src="img/index/main_banner_ebook.jpg" alt=" " width="1200" height="400" /></li>
+<li><a href="https://sangyoukaikan.jp/hsk50th/html5.html#page=1" target="_blank"><img src="img/index/main_banner_ebook.jpg" alt=" " width="1200" height="400" /></a></li>
 
 
-<li><img src="img/index/main_img59.jpg" alt=" " width="1200" height="400" /></li>
+<li><a rel="https" href="http://hiroshima-box.com/vr.html"><img src="img/index/main_img59.jpg" alt=" " width="1200" height="400" /></a></li>
 
 
 
-<li><img src="img/index/bnr_03.jpg" alt=" " width="1200" height="400" /></li>
+<li><a rel="https" href="http://hiroshima-box.com/"><img src="img/index/bnr_03.jpg" alt=" " width="1200" height="400" /></a></li>
 
 
 
