本番バックアップ

--- a/themes/san_kaikan/top.html
+++ b/themes/san_kaikan/top.html
@@ -247,6 +247,21 @@ ACMS.Ready(function() {
 	</div>
 	<div id="main">
 		<div id="conts">
+			<div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
+				<div style="font-size:135%">
+				<p><b>
+					広島県では新型コロナウィルスの感染が、これまでにない極めて速いスピードで拡大する事態となり、社会機能の維持が困難となることも懸念されております。こうした中、まん延防止等重点措置の適用を受け対策に取り組んでいますが、今後再拡大を防ぐ必要があることから、当該措置を実施すべき期間の延長を要請し、３月６日まで延長することが決定されました。
+					<br />
+					（<a href="https://sangyoukaikan.jp/archives/001/202201/20220108.pdf" style="color:black;" target="_blank">広島県におけるイベントの開催条件について</a>）
+				<br />
+				このため、広島産業会館では、令和4年1月9日（日）から3月6日（日）までの間、休館とし、期間中の開催にあたる新規の予約受付等を休止しますが、<font color="#ff0000">既に利用許可を行っているイベント等（当館ホームページの<a href="https://sangyoukaikan.jp/event/"  target="_blank" style="color:#ff0000"> イベント情報</a>参照）については、予定どおり実施</font>されます。
+				<br />
+				皆様のご理解とご協力をお願いいたします。
+				<br />
+				</b></p>
+				</div>
+				</span>
+			</div>
 
 <div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
 <div style="font-size:135%">
