--- a/themes/san_kaikan/top.html
+++ b/themes/san_kaikan/top.html
@@ -247,21 +247,43 @@ ACMS.Ready(function() {
 	</div>
 	<div id="main">
 		<div id="conts">
-			<div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
-				<div style="font-size:135%">
-				<p><b>
-					広島県では新型コロナウィルスの感染が、これまでにない極めて速いスピードで拡大する事態となり、社会機能の維持が困難となることも懸念されております。こうした中、まん延防止等重点措置の適用を受け対策に取り組んでいますが、今後再拡大を防ぐ必要があることから、当該措置を実施すべき期間の延長を要請し、３月６日まで延長することが決定されました。
-					<br />
-					（<a href="https://sangyoukaikan.jp/archives/001/202201/20220108.pdf" style="color:black;" target="_blank">広島県におけるイベントの開催条件について</a>）
-				<br />
-				このため、広島産業会館では、令和4年1月9日（日）から3月6日（日）までの間、休館とし、期間中の開催にあたる新規の予約受付等を休止しますが、<font color="#ff0000">既に利用許可を行っているイベント等（当館ホームページの<a href="https://sangyoukaikan.jp/event/"  target="_blank" style="color:#ff0000"> イベント情報</a>参照）については、予定どおり実施</font>されます。
-				<br />
-				皆様のご理解とご協力をお願いいたします。
-				<br />
-				</b></p>
-				</div>
-				</span>
-			</div>
+<!--
+<div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
+	<div style="font-size:135%">
+	<p><b>
+		広島県では新型コロナウィルスの感染が、これまでにない極めて速いスピードで拡大する事態となり、社会機能の維持が困難となることも懸念されております。こうした中、まん延防止等重点措置の適用を受け対策に取り組んでいますが、今後再拡大を防ぐ必要があることから、当該措置を実施すべき期間の延長を要請し、３月６日まで延長することが決定されました。
+		<br />
+		（<a href="https://sangyoukaikan.jp/archives/001/202201/20220108.pdf" style="color:black;" target="_blank">広島県におけるイベントの開催条件について</a>）
+	<br />
+	このため、広島産業会館では、令和4年1月9日（日）から3月6日（日）までの間、休館とし、期間中の開催にあたる新規の予約受付等を休止しますが、<font color="#ff0000">既に利用許可を行っているイベント等（当館ホームページの<a href="https://sangyoukaikan.jp/event/"  target="_blank" style="color:#ff0000"> イベント情報</a>参照）については、予定どおり実施</font>されます。
+	<br />
+	皆様のご理解とご協力をお願いいたします。
+	<br />
+	</b></p>
+	</div>
+	</span>
+</div>
+-->
+
+<div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
+	<div style="font-size:135%">
+		<p><b>
+			広島県の現在の感染状況は、新規報告者数の逓減が継続し、今後再拡大しなければ、医療提供体制を維持できる水準（一般医療と両立可能な病床運用で確保病床使用率が50％を下回っている状態）まで改善することが見込まれることから、令和４年１月７日から（まん延防止等重点措置の適用は１月９日から）取り組んできた集中対策については、３月６日をもって終了されましたが、引き続き、外出の削減などの行動制限や営業時間の短縮などの施設の使用制限を原則、解除して、基本的な対策を徹底することが求められております。<br />
+			こうした広島県の要請を踏まえ、<u>３月７日以降の広島産業会館における再拡大防止に向けた対策を次のとおりとします</u>ので、引き続き御協力を賜りますようお願いいたします。
+		<br /><br />
+		</b></p>
+		<div style="border: 1px solid #888888; padding: 10px;">
+			<p><b>
+				〇　業種別ガイドラインの遵守など感染防止対策<br />
+				〇　感染人数の上限<br />
+				【基本】（Ａ）（Ｂ）のいずれか少ない方を限度<br />
+				（Ａ）上限人数:5,000人又は収容定員50%の大きい方<br />
+				（Ｂ）収容率:観客の大きな声での声援　有る50%／無い100%
+			</b></p>
+		</div>
+	</div>
+	</span>
+</div>
 
 <div style="border: 1px solid #cccccc; padding: 10px;"><span class="sample5">
 <div style="font-size:135%">
